--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.11.1",
+    "ethers": "^6.0.8",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "wagmi": "^0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
