--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@secretarium/react-native-ble": "^0.1.2",
     "crypto": "^1.0.1",
+    "ethers": "^6.0.8",
     "events": "^3.3.0",
     "process": "^0.11.10",
     "react": "18.2.0",
