--- a/package.json
+++ b/package.json
@@ -13,19 +13,40 @@
   "dependencies": {
     "@ethersproject/shims": "^5.7.0",
     "@metamask/sdk": "^0.1.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "@secretarium/react-native-ble": "^0.1.2",
     "crypto": "^1.0.1",
+    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5",
     "events": "^3.3.0",
     "process": "^0.11.10",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-background-timer": "^2.4.1",
+    "react-native-base64": "^0.2.1",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-crypto": "^2.2.0",
+    "react-native-gradient-buttons": "^2.0.2",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-mmkv-storage": "^0.8.0",
     "react-native-randombytes": "^3.6.1",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
     "readable-stream": "^1.0.33",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2",
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0"
   },
@@ -38,6 +59,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
